# Major-Project

./: .gitattributes  .gitignore  Dockerfile.mlflow  Sure. I’ll explain this in plain, n.txt  anchors_completed.json  argocd-master-app.yaml  docker-compose.yml  idl.json  image-manifest.json  patch.yaml  sample-manifest.json
.github/workflows/: anchor-build.yml  cd-helm-argocd.yml  ci-update-image.yml  ci.yml  ml-deploy.yml
anchor-frontend-main/: App.tsx  env.js  index.css  index.html  index.tsx  package-lock.json  package.json  tsconfig.json  vercel.json  vite-env.d.ts  vite.config.ts
anchor-frontend-main/components/: Anchors.tsx  Auth.tsx  (+5 more)
infra/: Dockerfile  cluster-issuer.yaml  ipfs.yaml  kafka-debug-pod.yaml  kafka-emergency.yaml  kafka-external-endpoints.yaml  kafka-external-externalname.yaml  kafka-external-service.yaml  kafka-ui.yaml  kafka.yaml  keycloak-ingress.yaml  keycloak.yaml  mailhog.yaml  major-project-ingress.yaml  minio-bridge.yaml  minio.yaml  opensearch.yaml  postgresql.yaml  solana-test-validator.yaml  submitter-bridge.yaml
monitoring/: docker-compose.yml  observability-stack.yaml
programs/anchor_program/: .gitignore  Anchor.toml  Cargo.toml  Dockerfile.deploy  Dockerfile.idl  README.md
programs/anchor_program/src/: lib.rs
programs/escrow-program/programs/escrow/: Cargo.toml
programs/escrow-program/programs/escrow/src/: lib.rs
programs/escrow-program/programs/escrow/tests/: escrow.test.ts  package-lock.json  package.json
scripts/: bump-argocd-values.sh
test-ledger/: faucet-keypair.json  genesis.bin.failed  genesis.tar.bz2.failed
(+315 files in other folders)
